# Algoritmo-de-classifica-o

./: dominios.xlsx  pyproject.toml  resultado.txt  roboExcelRegistro.py
