[tool.poetry]
name = "algoritmo-de-classificacao"
version = "0.1.0"
description = ""
authors = ["hemersonmrd <silva.hemerson@gmail.com>"]
readme = "README.md"
packages = [{include = "algoritmo_de_classificacao"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.10.0"
xlrd = "^2.0.1"
pandas = "^2.0.2"
openpyxl = "^3.1.2"
webdriver-manager = "^3.8.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
